修改明星店文案

--- a/Application/Phone/View/Miaoji/famousShop.html
+++ b/Application/Phone/View/Miaoji/famousShop.html
@@ -126,7 +126,7 @@
 
 
             <p class="gray-text1 text-center small-text margin-top30">
-                如果你也想上传您的店铺，那就点击<a href="{:UC('Shop/openShop')}" external>立即开店</a>吧
+                想上明星店?那就点击<a href="tel:18176621816" external>告诉我们</a>吧
             </p>
         </div>
 
