修改个人中心菜单

--- a/Application/Phone/View/User/index.html
+++ b/Application/Phone/View/User/index.html
@@ -21,6 +21,10 @@
                     我的订单
                     <div style="float: right"> &gt </div>
                 </a>
+                <a class="yspanel-line block" href="{:UC('User/publishAd')}">
+                    发布信息
+                    <div style="float: right"> &gt </div>
+                </a>
                 <a class="yspanel-line block" href="{:UC('User/couponUser')}">
                     我的优惠券
                     <div style="float: right"> &gt </div>
@@ -31,6 +35,10 @@
                 </a>
                 <a class="yspanel-line block" href="{:UC('User/myLikeShop')}">
                     我喜欢的店铺
+                    <div style="float: right"> &gt </div>
+                </a>
+                <a class="yspanel-line block" href="{:UC('User/myCollectAd')}">
+                    我收藏的信息
                     <div style="float: right"> &gt </div>
                 </a>
             </div>
