修改自动回复

--- a/Application/Phone/View/Test/testText.html
+++ b/Application/Phone/View/Test/testText.html
@@ -3,7 +3,7 @@
 
 
 <div style="background: #09BB07;width: 900px; height:500px;">
-    <div style="color: #FFFFFF;font-size: 56px;line-height: 500px;text-align: center;font-family: "微软雅黑";">正在为您配送</div>
+    <div style="color: #FFFFFF;font-size: 56px;line-height: 500px;text-align: center;font-family: "微软雅黑";">发布我的广告</div>
 </div>
 
 </body>
