修改发小广告

--- a/Application/Phone/View/User/addAdMsg.html
+++ b/Application/Phone/View/User/addAdMsg.html
@@ -17,6 +17,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="weui_cells weui_cells_form">
+                    <div class="weui_cell">
+                        <div class="weui_cell_hd"><label class="weui_label">标题</label></div>
+                        <div class="weui_cell_bd weui_cell_primary">
+                            <input class="weui_input" type="text" name="title"  placeholder="请输入广告标题" value="{$info['title']}" required>
+                        </div>
+                    </div>
+                </div>
                 <div class="cell">
                     <div class="weui_cells_title">广告正文</div>
                     <div class="weui_cells weui_cells_form">
