--- a/Application/Phone/View/Activity/showAllActivity.html
+++ b/Application/Phone/View/Activity/showAllActivity.html
@@ -29,7 +29,7 @@
                             </if>
                         </div>
                         <div class="yspanel-content-box text-line3">
-                            <h3>{$info['shopname']}</h3>
+                            <h3>{$info['shopname']}<span class="fr small-text">(点击查看详情)</span></h3>
                             <span>{$info['intro']|strip_tags}</span>
                         </div>
                     </a>
