--- a/Application/Phone/View/User/addAdMsg.html
+++ b/Application/Phone/View/User/addAdMsg.html
@@ -34,16 +34,26 @@
                             </div>
                         </div>
                     </div>
-                    <div class="weui_cells">
-                        <div class="weui_cell weui_cell_select">
-                            <div class="weui_cell_bd weui_cell_primary">
-                                <select name="type" class="weui_select" required>
-                                    <option value="4">请选择广告类型</option>
-                                    <option value="1" <if condition="$info['type'] eq 1">selected=selected</if>>招聘</option>
-                                    <option value="2" <if condition="$info['type'] eq 2">selected=selected</if>>转让</option>
-                                    <option value="3" <if condition="$info['type'] eq 3">selected=selected</if>>租赁</option>
-                                    <option value="4" <if condition="$info['type'] eq 4">selected=selected</if>>其他</option>
-                                </select>
+                </div>
+                <div class="weui_cells_title">上传照片（如上传不了，请联系客服）</div>
+                <div class="weui_cells weui_cells_form">
+                    <div class="weui_cell">
+                        <div class="weui_cell_bd weui_cell_primary">
+                            <div class="weui_uploader_bd">
+                                <ul class="weui_uploader_files">
+                                    <volist name="goodsImgInfos" id="imgInfo">
+                                        <li class="weui_uploader_file" style="background-image:url('{$imgInfo.url}')">
+                                            <input type="hidden" name="media_ids[]" value="{$imgInfo.id}">
+                                        </li>
+                                    </volist>
+                                </ul>
+                                <div class="weui_uploader_input_wrp">
+                                    <input class="weui_uploader_input" type="file" accept="image/jpg,image/jpeg,image/png,image/gif"
+                                           data-mediatype="<?php echo C('MediaType_Image');?>"
+                                           data-entitytype="<?php echo C('EntityType_AdMsg');?>"
+                                           data-entityid="{$info['id']}"
+                                           id="uploadFile">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -54,6 +64,10 @@
                         <div class="col-100"><button type="submit" class="button button-big button-fill button-success" style="width: 100%;">提交</button></div>
                     </div>
                 </div>
+
+                <p class="gray-text1 text-center small-text margin-top30">
+                    客服电话：<a href="tel:18176621816">18176621816</a>
+                </p>
             </form>
 
         </div>
