修改样式和一些文案按钮

--- a/Application/Phone/View/Miaoji/zhaoPin.html
+++ b/Application/Phone/View/Miaoji/zhaoPin.html
@@ -39,6 +39,11 @@
                 </volist>
             </div>
 
+            <div class="fixbtnbox">
+                <a class="rangBtn external" href="{:UC('User/addAdMsg')}">我要<br>发布</a>
+            </div>
+
+
             <?php
                  if(count($list)>=C('PageSize')){
             ?>
