--- a/Application/Phone/View/template/temp.html
+++ b/Application/Phone/View/template/temp.html
@@ -17,6 +17,11 @@
 
 </head>
 <body>
+
+<div class="modal loading modal-in" id="loadingBox" style="display: block; margin-top: -39px; margin-left: -34px;">
+    <i class="iconfont am-icon-spinner am-icon-pulse" style="font-size: 36px;">&#xe613;</i>
+</div>
+
 <div class="page-group">
     <block name="content"></block>
 </div>
