--- a/Public/css/app.css
+++ b/Public/css/app.css
@@ -40,11 +40,11 @@ body{background: #eee;font-size: 14px;}
 .iconfont{font-family:"iconfont";font-style:normal;}
 @font-face {
     font-family: 'iconfont';
-    src: url('//at.alicdn.com/t/font_1464681427_2368908.eot'); /* IE9*/
-    src: url('//at.alicdn.com/t/font_1464681427_2368908.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('//at.alicdn.com/t/font_1464681427_2368908.woff') format('woff'), /* chrome、firefox */
-    url('//at.alicdn.com/t/font_1464681427_2368908.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    url('//at.alicdn.com/t/font_1464681427_2368908.svg#iconfont') format('svg'); /* iOS 4.1- */
+    src: url('//at.alicdn.com/t/font_1464740747_972236.eot'); /* IE9*/
+    src: url('//at.alicdn.com/t/font_1464740747_972236.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('//at.alicdn.com/t/font_1464740747_972236.woff') format('woff'), /* chrome、firefox */
+    url('//at.alicdn.com/t/font_1464740747_972236.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url('//at.alicdn.com/t/font_1464740747_972236.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .flex{
@@ -151,9 +151,36 @@ a.btnitem{display: block;}
 .branch-box{padding: 15px 0;}
 .branch-box h3,.branch-box p{text-align: center;}
 
+.loading{background:rgba(0,0,0,.3);color:#fff;padding:0.8rem;line-height:2rem;font-size:.8rem;width:auto}
+.am-icon-pulse {
+    -webkit-animation: icon-spin 1s infinite steps(8);
+    animation: icon-spin 1s infinite steps(8);
+}
+@-webkit-keyframes icon-spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
+    }
+}
+@keyframes icon-spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
+    }
+}
+
 .swiper-slide-center-text{position: absolute;top:50%;left: 50%;color: #fff;font-size: 28px;width: 200px;line-height: 50px;margin-top: -25px;margin-left: -100px;text-align: center;text-shadow: 1px 1px 1px #666;}
 .fixbtnbox{position: fixed;left: 20px;bottom: 20px;}
 .fixbtn{display: block;width:50px;height: 50px;background:rgba(0,0,0,0.6);border-radius: 80px;text-align: center;line-height: 45px;color: #fff;font-size: 24px;}
+.rangBtn{display: block;background:rgba(0,0,0,0.6);text-align: center;color: #fff;padding: 5px 10px;}
 
 .gs-content-wrap{background: #ec4949;}
 .gs-content-wrap .db-logo{font-size: 36px;text-align: center;padding: 40px 0;color: #fff;}
