--- a/Application/Phone/View/template/temp.html
+++ b/Application/Phone/View/template/temp.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
     <link rel="stylesheet" href="__PUBLIC__/css/app.css?v={$rannum}">
 
+    <block name="css"></block>
 
 </head>
 <body>
