修改文案和样式

--- a/Application/Phone/View/Miaoji/zhaoPin.html
+++ b/Application/Phone/View/Miaoji/zhaoPin.html
@@ -16,9 +16,9 @@
             <div id="msg_content" style="padding-bottom: 40px;">
                 <volist name="list" id="info">
                     <div class="yspanel border margin-top30">
-                        <h3 class="text-center green-text" style="padding: 20px 0;">{$info['title']}</h3>
+                        <h3 class="text-center green-text" style="padding-top: 10px;">{$info['title']}</h3>
                         <div class="yspanel-content-box2">
-                            <div class="mcontent text-line3">{$info['mcontent']}</div>
+                            <div class="mcontent text-line5">{$info['mcontent']}</div>
                             <a href="javascript:;" class="morebtn"><i class="iconfont">&#xe610;</i>查看全文</a>
                             <div class="piclistbox">
                                 <volist name="info.pics" id="url">
