--- a/Public/css/app.css
+++ b/Public/css/app.css
@@ -236,9 +236,11 @@ a.activity-goods-box{color: #333333;}
 .activity-intro{background: #fff;padding: 10px;}
 .button-box{margin-top: 30px;padding: 0 10px;}
 
-.search-content-box{margin-top: 50px;padding-bottom: 50px;}
+.search-content-box{margin-top: 45px;background: #FFFFFF;}
 .search-index{padding: 0 10px;text-align: center;}
 .search-index-item{display: inline-block; padding: 10px; background: #fff; margin:10px;width: 25%;text-align: center;}
+.search-row{}
+.search-row .item{border: solid 1px #CCCCCC;height: 50px;line-height: 50px; text-align: center;}
 
 .mapbtn{width: 60px;}
 
