改进广告发布功能

--- a/Application/Phone/View/Miaoji/zhaoPin.html
+++ b/Application/Phone/View/Miaoji/zhaoPin.html
@@ -20,21 +20,21 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="search-row flex">
-                                <div class="flex-1 item search-item">招聘</div>
-                                <div class="flex-1 item search-item">转让</div>
-                                <div class="flex-1 item search-item">美食</div>
+                                <div class="flex-1 item search-item" data-key="">全部</div>
+                                <div class="flex-1 item search-item" data-key="转让">转让</div>
+                                <div class="flex-1 item search-item" data-key="招聘诚聘招工">招聘</div>
                             </div>
                             <div class="search-row flex">
-                                <div class="flex-1 item search-item">衣服</div>
-                                <div class="flex-1 item search-item">打印</div>
-                                <div class="flex-1 item search-item">装修</div>
+                                <div class="flex-1 item search-item" data-key="衣服">衣服</div>
+                                <div class="flex-1 item search-item" data-key="打印">打印</div>
+                                <div class="flex-1 item search-item" data-key="装修维修">装修维修</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="search-row flex">
-                                <div class="flex-1 item search-item">二手车房</div>
-                                <div class="flex-1 item search-item">租房</div>
-                                <div class="flex-1 item search-item">搬家</div>
+                                <div class="flex-1 item search-item" data-key="二手车 二手房">二手车房</div>
+                                <div class="flex-1 item search-item" data-key="租房">租房</div>
+                                <div class="flex-1 item search-item" data-key="搬家">搬家</div>
                             </div>
                         </div>
                     </div>
