--- a/Application/Phone/View/Miaoji/zhaoPin.html
+++ b/Application/Phone/View/Miaoji/zhaoPin.html
@@ -27,7 +27,7 @@
                             <div class="search-row flex">
                                 <div class="flex-1 item search-item" data-key="衣服">衣服</div>
                                 <div class="flex-1 item search-item" data-key="打印">打印</div>
-                                <div class="flex-1 item search-item" data-key="装修维修">装修维修</div>
+                                <div class="flex-1 item search-item" data-key="装修维修">装修</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
