--- a/Application/Phone/View/User/addAdMsg.html
+++ b/Application/Phone/View/User/addAdMsg.html
@@ -1,13 +1,7 @@
 <extend name="template/temp" />
 <block name="content">
     <div class="page" id="addAdMsg">
-        <div class="content native-scroll pull-to-refresh-content">
-            <div class="pull-to-refresh-layer">
-                <div class="preloader"></div>
-                <div class="pull-to-refresh-arrow"></div>
-            </div>
-            <div class="text-center margin-top30 gray-text">
-            </div>
+        <div class="content native-scroll">
             <form method="post" action="">
                 <div class="weui_cells weui_cells_form">
                     <div class="weui_cell">
