--- a/Application/Phone/View/User/index.html
+++ b/Application/Phone/View/User/index.html
@@ -16,13 +16,10 @@
                 </div>
             </div>
 
+
             <div class="yspanel margin-top">
                 <a class="yspanel-line block" href="{:UC('Goods/orderList')}">
                     我的订单
-                    <div style="float: right"> &gt </div>
-                </a>
-                <a class="yspanel-line block" href="{:UC('User/publishAd')}">
-                    发布信息
                     <div style="float: right"> &gt </div>
                 </a>
                 <a class="yspanel-line block" href="{:UC('User/couponUser')}">
@@ -39,6 +36,14 @@
                 </a>
                 <a class="yspanel-line block" href="{:UC('User/myCollectAd')}">
                     我收藏的信息
+                    <div style="float: right"> &gt </div>
+                </a>
+            </div>
+
+
+            <div class="yspanel margin-top">
+                <a class="yspanel-line block" href="{:UC('User/publishAd')}">
+                    我要发布广告
                     <div style="float: right"> &gt </div>
                 </a>
             </div>
