广告下拉刷新

--- a/Application/Phone/View/Miaoji/zhaoPin.html
+++ b/Application/Phone/View/Miaoji/zhaoPin.html
@@ -5,7 +5,11 @@
 
 <block name="content">
     <div class="page" id="zhaoPin">
-        <div class="content native-scroll infinite-scroll">
+        <div class="content native-scroll pull-to-refresh-content infinite-scroll">
+            <div class="pull-to-refresh-layer">
+                <div class="preloader"></div>
+                <div class="pull-to-refresh-arrow"></div>
+            </div>
             <div class="bar">
                 <div class="searchbar">
                     <a class="searchbar-cancel">取消</a>
