调试模式下不启动统计

--- a/Application/Phone/View/template/temp.html
+++ b/Application/Phone/View/template/temp.html
@@ -27,7 +27,11 @@
     <block name="content"></block>
 </div>
 
+<?php if(!C('LOCAL_DEV')){
+?>
 <script type="text/javascript" src="http://tajs.qq.com/stats?sId=56290858" charset="UTF-8"></script>
+<?php
+} ?>
 
 <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
