--- a/Public/css/app.css
+++ b/Public/css/app.css
@@ -91,6 +91,17 @@ body{background: #eee;font-size: 14px;}
     justify-content: space-between;
 }
 
+.page-title {
+    text-align: center;
+    font-size: 24px;
+    color: #3cc51f;
+    font-weight: 100;
+    margin: 0 15%;
+}
+.hd {
+    padding: 2em 0;
+}
+
 .msgpage{padding-top: 35px;}
 .msgpage .msgpage-icon{font-size: 50px; text-align: center; padding: 35px;}
 .msgpage-info{ color: #ff6600;}
