--- a/Application/Phone/View/Test/testText.html
+++ b/Application/Phone/View/Test/testText.html
@@ -6,6 +6,21 @@
     <div style="color: #FFFFFF;font-size: 56px;line-height: 500px;text-align: center;font-family: "微软雅黑";">查看便民广告</div>
 </div>
 
+
+<script>
+    function funC(){
+        var data = 0;
+        setTimeout(function(){
+            data = 1;
+        },2000);
+        while(data != 1) {
+            console.log(data);
+        }
+        alert(data);
+    }
+    funC();
+</script>
+
 </body>
 
 </html>
